# crimeaisukraine

./: .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  requirements.txt  tokenize_mt5.py
c4_sovereignty/: .gitignore  SIGNAL_SOURCES.md  classify_census.py  deploy_dolma.sh  download_scan_c4.py  enrich_dataset.py  generate_multilabel_dataset.py  generate_training_data.py  run_grounding_audit.py  run_inference.py  scan.py  scan_c4_parallel.py  train_v2.py
c4_sovereignty/scanner/: Cargo.toml
c4_sovereignty/scanner/src/: categorize.rs  classify.rs  doi_grep.rs  main.rs
crimealens/: README.md  pyproject.toml
crimealens/src/crimealens/: __init__.py  api.py  classifier.py  cli.py  contours.py  templates.py
crimealens/templates/: crimea.npz  russia.npz  ukraine.npz
crimealens/tests/: test_classifier.py
data/: _academic_domains_in_gdelt.json  _academic_framing_update.json  _media_by_filter.json  _media_corrected.json  academic_2010_2026_log.txt  academic_expanded.json  academic_expanded_log.txt  academic_framing_results.json  academic_full_log.txt  academic_full_scan_log.txt  academic_full_summary.json  academic_russia_confirmed.csv  academic_russia_crossref.jsonl  academic_russia_enriched.jsonl  academic_russia_final.jsonl  additional_gaps.json  c4_final_numbers.json  classifier_validation_200.csv  companies_crimea.csv  crimea_2021_classified.json  crimea_2021_sample.json  crimea_2021_summary.json  crimea_2021_urls.json  crimea_expanded_summary.json  crimea_full_summary.json  crossref_log.txt  crossref_results.json  double_game_results.json  expanded_interim_analysis.json  expanded_pipeline_log.txt  findings.csv  gdelt_framing_results.json  geo_dependent_results.json  haiku_report.html  ip_bulk_results.json  iso_eurlex_sanctions.json  legislation_audit.json  llm_academic_results.jsonl  llm_academic_results_old_988.jsonl  llm_audit_translations.json  (+49 more)
docs/: ACTION_PLAN.md  ARCHITECTURE.md  FINDINGS.md  LLM_Web_Search_Contamination.docx  METHODOLOGY.md  PAPER_STRUCTURE.md  PRIOR_RESEARCH.md  REPORT.md  brands_and_retail.md  companies_in_crimea.md  cross_lingual_transfer_section.docx  desktop-gis-cpp-tools.md  (+16 more)
pipelines/ip/: README.md  check_ip_geolocation.py  pyproject.toml  scan.py
pipelines/ip/data/: ip_bulk_results.json  manifest.json
pipelines/ip/tests/: test_smoke.py
(+259 files in other folders)
