[project]
name = "crimealens"
version = "0.1.0"
description = "Visual classifier for Crimea sovereignty on maps — detects whether a map image shows Crimea as part of Ukraine or Russia"
readme = "README.md"
authors = [
    { name = "Ivan Dobrovolskyi", email = "dobrovolsky94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "scipy>=1.13",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn>=0.29", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
crimealens = "crimealens.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
