[package]
name = "crimea-scanner"
version = "0.1.0"
edition = "2021"
description = "Fast scanner for Crimea sovereignty framing in training corpora"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
glob = "0.3"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
