[package]
name = "crimea-scanner"
version = "0.2.0"
edition = "2021"
description = "Fast scanner for Crimea sovereignty framing in training corpora"

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
regex = "1"

[[bin]]
name = "crimea-scanner"
path = "src/main.rs"

[[bin]]
name = "crimea-classify"
path = "src/classify.rs"

[[bin]]
name = "crimea-doi-grep"
path = "src/doi_grep.rs"

[profile.release]
opt-level = 3
lto = true
